# tablet

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
dep/opencv/: README
dep/opencv/include/core/opencv2/core/: base.hpp  directx.hpp  mat.hpp  mat.inl.hpp  opengl.hpp  private.hpp  utility.hpp  version.hpp
dep/opencv/include/fuzzy/opencv2/fuzzy/: fuzzy_F0_math.hpp  fuzzy_image.hpp
dep/opencv/include/hal/opencv2/hal/: defs.h  intrin_neon.hpp
dep/opencv/include/highgui/opencv2/: highgui.hpp
dep/opencv/include/imgproc/opencv2/: imgproc.hpp
dep/opencv/include/line_descriptor/opencv2/line_descriptor/: descriptor.hpp
dep/opencv/include/optflow/opencv2/: optflow.hpp
dep/opencv/include/videoio/opencv2/: videoio.hpp
dep/opencv/include/videoio/opencv2/videoio/: cap_winrt.hpp
dep/opencv/include/ximgproc/opencv2/: ximgproc.hpp
dep/opencv/include/ximgproc/opencv2/ximgproc/: edge_filter.hpp  slic.hpp
dep/opencv/lib/lx/: libopencv_calib3d.so.3.0.0  libopencv_core.so.3.0.0  libopencv_features2d.so.3.0.0  libopencv_flann.so.3.0.0  libopencv_highgui.so.3.0.0  libopencv_imgcodecs.so.3.0.0  libopencv_imgproc.so.3.0.0  libopencv_ml.so.3.0.0  libopencv_objdetect.so.3.0.0  libopencv_photo.so.3.0.0  libopencv_shape.so.3.0.0  libopencv_stitching.so.3.0.0  libopencv_superres.so.3.0.0  libopencv_video.so.3.0.0  libopencv_videoio.so.3.0.0  libopencv_videostab.so.3.0.0
main/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
